# complyflow

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  latest_conversation.txt  latest_convo.txt  pyproject.toml  pytest.ini  railway.json  railway.toml  requirements.txt
.github/workflows/: ci.yml
cuad/: README.md  contract_types.json  contracts_to_extract.json  download_cuad.sh  extract_metadata.py  test_contracts_to_extract.json
cuad/fake_data/: fake_contract.txt
cuad/test/: metadata.csv  metadata.json
cuad/train/: metadata.csv  metadata.json
deploy/: README.md  alerts-cron.railway.json  regwatch-ingest.railway.json  weekly-digest-cron.railway.json
docs/: api-spec.json  extraction-evaluation.md  frontend-spec.md  frontend_contract_editor_prompt.md  multi-model-extraction.md
docs/plans/: 016_contract_intake_api.md  016_contracts_chatbot.md  016_daily_ingestion_service.md
docs/prompts/: lovable_pdf_migration.md
output/: dashboard_data.json  gpt5_mini_test_summary.json
output/date_computation/: date_eval_std_20251201_213149_summary.json  date_eval_std_20251201_213529_summary.json  date_eval_std_20251203_062630_summary.json  date_eval_std_20251203_062807_summary.json  date_eval_std_20251203_063909_summary.json  date_eval_std_20251203_064127_summary.json  date_eval_std_20251203_065907_summary.json  date_eval_std_20251203_071721_summary.json  date_eval_std_20251203_073842_summary.json  ground_truth.json  test_review.csv  train_review.csv
output/eval_pairs/: test_eval_pairs_20251127_193627.json  test_eval_pairs_20251130_125626.json  train_eval_pairs_20251127_153304.json  train_eval_pairs_20251127_170031.json
output/flash/: 01_service_gpaq_extraction.json  01_service_mplx_extraction.json  02_service_martinmidstream_extraction.json  02_service_reynolds_extraction.json  03_service_blackstonegsolo_extraction.json  03_service_verizon_extraction.json  04_service_atmosenergy_extraction.json  04_service_integrity_extraction.json  05_license_gopage_extraction.json  05_license_pacificapentert_extraction.json  06_license_midwestenergyem_extraction.json  06_license_morganstanley_extraction.json  07_license_cytodyn_extraction.json  08_license_artara_extraction.json  (+6 more)
scripts/: README.md  eval_endpoint.py  eval_generation.py  eval_judge.py  eval_retrieval.py  eval_snowflake_arctic.py  index_regwatch.py  reindex_all.py  test_api.py  test_cellar.py  test_chunk_integrity.py  test_langfuse_pricing.py  test_regwatch.py
src/: langfuse_client.py
tests/: conftest.py
(+298 files in other folders)
