[project]
name = "complyflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "google-cloud-aiplatform[tokenization]>=1.128.0",
    "google-genai>=1.0.0",
    "langfuse>=3.10.1",
    "openai>=2.8.1",
    "openinference-instrumentation-google-genai>=0.1.0",
    "opentelemetry-instrumentation-anthropic>=0.49.3",
    "opentelemetry-instrumentation-openai>=0.49.3",
    "pdfplumber>=0.11.8",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
]
