[project]
name = "complyflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "boto3>=1.42.4",
    "cohere>=5.20.0",
    "fastapi>=0.115.0",
    "fastembed>=0.7.4",
    "google-cloud-aiplatform[tokenization]>=1.128.0",
    "google-genai>=1.0.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.0",
    "langchain-text-splitters>=1.0.0",
    "langfuse>=3.10.1",
    "openai>=2.8.1",
    "openinference-instrumentation-google-genai>=0.1.0",
    "opentelemetry-instrumentation-anthropic>=0.49.3",
    "opentelemetry-instrumentation-openai>=0.49.3",
    "pdfplumber>=0.11.8",
    "pyairtable>=3.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.1",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
    "reportlab>=4.2.0",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8.0",
]
